5.0.2 -> 5.0.3:
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - proyvind: add some extra functionality to gendiff (ancient Mandriva patch by Chmouel Boudjnah)
    - pixel: do check free size when bavail is 0
    - jbj: refactor rpmcliErase to use same code as rpmtsInstall.
    - jbj: fix: rpmtsCheck non-zero return prevents --erase.
    - jbj: fix: avoid {pre,post}trans scrareMem assert failure.
    - rpm.org: make find-lang --with-gnome picks up omf files (rhbz#251400) 
    - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
    - proyvind: trim multiple slashes from buildroot for check-files script (from Nanar/Olivier Thauvin)
    - proyvind: make rpmdb cpp compliant (from spturtle/Christiaan Welvaart)
    - jbj: fix: (again) rpmtsCheck() needs to return 1 when problems exist.
    - rse: add support for QNX by adjusting to its 3-parameter based makedev(2)
    - proyvind: add sparcv9v2 (Niagara 2) architecture
    - proyvind: add arch macros for alpha and sparc

5.0.1 -> 5.0.2:
    - jbj: fix: python: re-add rpm.archscore() for smart depsolving usage.
    - jbj: backport %{shrink:...} and %{getenv:...} builtin macros.
    - jbj: updated sv.po (Translation Project).
    - jbj: fix: permit #%patchN comments by forcing single line expansion.
    - jbj: document newer macro builtins (%{@foo:...}, %{uuid:...}, and %{lua:...} todo).
    - jbj: fix: poldek in PLD needs replacement for headerGetRawEntry().
    - rse: ensure macro option parsing is done correctly also under GLIBC by not allowing option/argument permutations
    - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.
    - jbj: fix: --rollback PSM_INIT changes added fstates before initialize.
    - rse: allow to compile without <langinfo.h> and its nl_langinfo(3)

5.0.0 -> 5.0.1:
    - jbj: replace sr.po from translation project.